# SDAonCUDA

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
SDAonCUDA/: CMakeLists.txt  SDAonCUDA.cpp  SDAonCUDA.h  cuda.cu  cuda.h  main.cpp  main.h  test.cu  test.h
